new part template cfgs

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
@@ -1,14 +1,14 @@
 // Near Future Construction 0.7.2
-// 3.75m Truss - Spinal
+// 3.75m Truss - Spinal Short
 PART
 {
-	name = truss-spinal-01
+	name = truss-spinal-03
 	module = Part
 	author = Chris Adderley
 
 	MODEL
 	{
-		model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01
+		model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03
 		position = 0.0, 0.0, 0.0
 		scale = 1,1,1
 		rotation = 0, 0, 0
@@ -27,7 +27,7 @@ PART
 	subcategory = 0
 	title = Modular Spinal Truss XL
 	manufacturer = Giga Bloks Construction Toys
-	description = A large square truss of considerable size with an internal core. Available in several variants.
+	description = A small square truss of considerable size with an internal core. Available in several variants.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = spinaltruss, srf
