--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-04.cfg
@@ -2,13 +2,13 @@
 // 3.75m Truss - Spinal
 PART
 {
-	name = truss-spinal-01
+	name = truss-spinal-04
 	module = Part
 	author = Chris Adderley
 
 	MODEL
 	{
-		model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01
+		model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-04
 		position = 0.0, 0.0, 0.0
 		scale = 1,1,1
 		rotation = 0, 0, 0
@@ -25,9 +25,9 @@ PART
 	cost = 800
 	category = Structural
 	subcategory = 0
-	title = Modular Spinal Truss XL
+	title = Modular Spinal Truss Micro
 	manufacturer = Giga Bloks Construction Toys
-	description = A large square truss of considerable size with an internal core. Available in several variants.
+	description = A shortened square truss of considerable size with an internal core. Available in several variants.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = spinaltruss, srf
