--- a/GameData/NearFutureConstruction/Patches/NFConstructionCommunityTechTree.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCommunityTechTree.cfg
@@ -23,6 +23,7 @@
 {
 	@TechRequired = exoticAlloys
 }
+
 // Big trusses in exoticAlloys (not the standard size)
 @PART[truss-circular-01]:NEEDS[CommunityTechTree]
 {
@@ -33,6 +34,18 @@
 	@TechRequired = exoticAlloys
 }
 @PART[truss-circular-04]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = exoticAlloys
+}
+@PART[truss-spinal-01]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = exoticAlloys
+}
+@PART[truss-spinal-03]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = exoticAlloys
+}
+@PART[truss-spinal-04]:NEEDS[CommunityTechTree]
 {
 	@TechRequired = exoticAlloys
 }
@@ -53,6 +66,10 @@
 @PART[truss-octo-docking-octo]:NEEDS[CommunityTechTree]
 {
 	@TechRequired = orbitalAssembly
+}
+@PART[truss-spinal-docking-01]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = orbitalMegastructures
 }
 @PART[truss-circular-docking-01]:NEEDS[CommunityTechTree]
 {
