--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
@@ -44,7 +44,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss circle nearfuture adapt
+	tags = connect frame scaffold structur strut truss circle nearfuture adapt annul hollow
 
 	MODULE
 	{
