--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
@@ -1,14 +1,14 @@
 // Near Future Construction 0.7.2
-// 3.75m Truss - Spinal
+// 3.75m Truss - Spinal to 2.5m
 PART
 {
-	name = truss-spinal-01
+	name = truss-spinal-adapter-02
 	module = Part
 	author = Chris Adderley
 
 	MODEL
 	{
-		model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01
+		model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02
 		position = 0.0, 0.0, 0.0
 		scale = 1,1,1
 		rotation = 0, 0, 0
@@ -16,7 +16,7 @@ PART
 	rescaleFactor = 1
 
 	node_stack_top01 = 0.0, 3.7497899, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom01 = 0.0, -3.749789, 0.0, 0.0, -1.0, 0.0,3
+	node_stack_bottom01 = 0.0, -3.749789, 0.0, 0.0, -1.0, 0.0, 2
 	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 3
 
 
@@ -25,12 +25,12 @@ PART
 	cost = 800
 	category = Structural
 	subcategory = 0
-	title = Modular Spinal Truss XL
+	title = Modular Spinal Truss Series-2 Adapter
 	manufacturer = Giga Bloks Construction Toys
-	description = A large square truss of considerable size with an internal core. Available in several variants.
+	description = Adapts the Spinal Truss profile to a standard 3.75m mount. Some variants are available.
 	attachRules = 1,1,1,1,0
 
-	bulkheadProfiles = spinaltruss, srf
+	bulkheadProfiles = spinaltruss, srf, size2
 
 	// --- standard part parameters ---
 	mass = 0.45
@@ -44,7 +44,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss saddle hollow nearfuture square spine
+	tags = connect frame scaffold structur strut truss saddle hollow nearfuture square spine adapt
 
 
 }
