Truss models added

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
@@ -15,9 +15,11 @@ PART
 	}
 	rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 3.7497899, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom01 = 0.0, -3.749789, 0.0, 0.0, -1.0, 0.0,3
-	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 3
+	node_stack_top01 = 0.0, 0.919, 0.0, 0.0, 1.0, 0.0, 3
+	node_stack_top02 = 0.0, 0.844, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_bottom01 = 0.0, -0.923, 0.0, 0.0, -1.0, 0.0,3
+	node_stack_bottom02 = 0.0, -0.847, 0.0, 0.0, 1.0, 0.0,2
+	node_attach = -1.332,0.0, 0.0, 1.0, 0.0, 0.0, 3
 
 
 	TechRequired = nanolathing
@@ -46,5 +48,131 @@ PART
 
 	tags = connect frame scaffold structur strut truss saddle hollow nearfuture square spine
 
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitch
+		switcherDescription = Core
+		SUBTYPE
+		{
+			name = None
+		}
+		SUBTYPE
+		{
+			name = Solid
+			transform = CORESML
+			transform = COLLIDERSMLCORE
+			addedMass = 0.5
+			addedCost = 720
+		}
+	}
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitch2
+		switcherDescription = Truss
+		SUBTYPE
+		{
+			name = Solid
+			transform = TRUSSSML
+			transform = COLLIDERSML01
+			transform = COLLIDERSML02
+			transform = COLLIDERSML03
+			transform = COLLIDERSML04
+		}
+		SUBTYPE
+		{
+			name = Saddle
+			transform = TRUSSSMLSADDLE
 
+			transform = COLLIDERSML04
+			transform = COLLIDERSML02
+			transform = COLLIDERSML03
+
+			addedMass = -0.4
+			addedCost = -1080
+		}
+		SUBTYPE
+		{
+			name = Dual
+			transform = TRUSSSMLDUAL
+			transform = COLLIDERSML03
+			transform = COLLIDERSML04
+			
+			addedMass = -0.7
+			addedCost = -2160
+		}
+		SUBTYPE
+		{
+			name = Frame
+			transform = TRUSSSMLFRAME
+			addedMass = -0.7
+			addedCost = -2160
+		}
+	}
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitch3
+		switcherDescription = Top Cap
+		
+		SUBTYPE
+		{
+			name = Basic
+			
+			transform = TRUSSTOP
+			transform = COLLIDERTOPA01
+			transform = COLLIDERTOPA02
+			transform = COLLIDERTOPA03
+			transform = COLLIDERTOPA04
+			addedMass = 0.05
+			addedCost = 100
+		}
+		SUBTYPE
+		{
+			name = Solid
+			node = top02
+			transform = TRUSSTOPSOLID
+			transform = COLLIDERTOPB
+			addedMass = 0.05
+			addedCost = 100
+		}
+		SUBTYPE
+		{
+			name = None
+			transform = TRUSSTOPFRAME
+		}
+	}
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitch4
+		switcherDescription = Bottom Cap
+		
+		SUBTYPE
+		{
+			name = Basic
+			transform = TRUSSBOT
+			transform = COLLIDERBOTA01
+			transform = COLLIDERBOTA02
+			transform = COLLIDERBOTA03
+			transform = COLLIDERBOTA04
+			addedMass = 0.05
+			addedCost = 100
+		}
+		SUBTYPE
+		{
+			name = Solid
+			node = bottom02
+			transform = TRUSSBOTSOLID
+			transform = COLLIDERBOTB
+			addedMass = 0.05
+			addedCost = 100
+		}
+		SUBTYPE
+		{
+			name = None
+			transform = TRUSSBOTFRAME
+		}
+	}
 }
