--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-01.cfg
@@ -15,9 +15,10 @@ PART
 	}
 	rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 3.7497899, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom01 = 0.0, -3.749789, 0.0, 0.0, -1.0, 0.0,3
-	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 3
+	node_stack_top01 = 0.0, 0.945, 0.0, 0.0, 1.0, 0.0, 3
+	node_stack_bottom02 = 0.0, -0.762, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_bottom01 = 0.0, -0.915, 0.0, 0.0, -1.0, 0.0,3
+	
 
 
 	TechRequired = nanolathing
@@ -28,7 +29,7 @@ PART
 	title = Modular Spinal Truss Series-3 Adapter
 	manufacturer = Giga Bloks Construction Toys
 	description = Adapts the Spinal Truss profile to a standard 3.75m mount. Some variants are available.
-	attachRules = 1,1,1,1,0
+	attachRules = 1,0,1,1,0
 
 	bulkheadProfiles = spinaltruss, srf, size3
 
@@ -46,5 +47,22 @@ PART
 
 	tags = connect frame scaffold structur strut truss saddle hollow nearfuture square spine adapt
 
-
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitch
+		switcherDescription = Core
+		SUBTYPE
+		{
+			name = None
+		}
+		SUBTYPE
+		{
+			name = Solid
+			transform = COREADAPT01
+			transform = COLLIDERADAPT01CORE
+			addedMass = 0.5
+			addedCost = 720
+		}
+	}
 }
