--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
@@ -15,10 +15,8 @@ PART
 	}
 	rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 3.7497899, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom01 = 0.0, -3.749789, 0.0, 0.0, -1.0, 0.0, 2
-	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 3
-
+	node_stack_top01 = 0.0, 0.935, 0.0, 0.0, 1.0, 0.0, 3
+	node_stack_bottom01 = 0.0, -0.922, 0.0, 0.0, -1.0, 0.0, 2
 
 	TechRequired = nanolathing
 	entryCost = 2900
@@ -27,8 +25,8 @@ PART
 	subcategory = 0
 	title = Modular Spinal Truss Series-2 Adapter
 	manufacturer = Giga Bloks Construction Toys
-	description = Adapts the Spinal Truss profile to a standard 3.75m mount. Some variants are available.
-	attachRules = 1,1,1,1,0
+	description = Adapts the Spinal Truss profile to a standard 2.5m mount. Some variants are available.
+	attachRules = 1,0,1,1,0
 
 	bulkheadProfiles = spinaltruss, srf, size2
 
@@ -45,6 +43,23 @@ PART
 	thermalMassModifier = 0.4 // I am hollow
 
 	tags = connect frame scaffold structur strut truss saddle hollow nearfuture square spine adapt
-
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitch
+		switcherDescription = Core
+		SUBTYPE
+		{
+			name = None
+		}
+		SUBTYPE
+		{
+			name = Solid
+			transform = COREADAPT02
+			transform = COLLIDERADAPT02CORE
+			addedMass = 0.5
+			addedCost = 720
+		}
+	}
 
 }
