mass and cost fixes

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
@@ -23,11 +23,11 @@ PART
 
 
 	TechRequired = nanolathing
-	entryCost = 2900
-	cost = 800
+	entryCost = 900
+	cost = 250
 	category = Structural
 	subcategory = 0
-	title = Modular Spinal Truss XL
+	title = Modular Spinal Truss Micro
 	manufacturer = Giga Bloks Construction Toys
 	description = A small square truss of considerable size with an internal core. Available in several variants.
 	attachRules = 1,1,1,1,0
@@ -35,7 +35,7 @@ PART
 	bulkheadProfiles = spinaltruss, srf
 
 	// --- standard part parameters ---
-	mass = 0.45
+	mass = 0.1875
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -62,8 +62,8 @@ PART
 			name = Solid
 			transform = CORESML
 			transform = COLLIDERSMLCORE
-			addedMass = 0.5
-			addedCost = 720
+			addedMass = 0.05
+			addedCost = 50
 		}
 	}
 	MODULE
@@ -84,13 +84,12 @@ PART
 		{
 			name = Saddle
 			transform = TRUSSSMLSADDLE
-
 			transform = COLLIDERSML04
 			transform = COLLIDERSML02
 			transform = COLLIDERSML03
 
-			addedMass = -0.4
-			addedCost = -1080
+			addedMass = -0.021875
+			addedCost = -28.125
 		}
 		SUBTYPE
 		{
@@ -98,16 +97,16 @@ PART
 			transform = TRUSSSMLDUAL
 			transform = COLLIDERSML03
 			transform = COLLIDERSML04
-			
-			addedMass = -0.7
-			addedCost = -2160
+
+			addedMass = -0.04375
+			addedCost = -56.25
 		}
 		SUBTYPE
 		{
 			name = Frame
 			transform = TRUSSSMLFRAME
-			addedMass = -0.7
-			addedCost = -2160
+			addedMass = 0.0875
+			addedCost = -112.5
 		}
 	}
 	MODULE
@@ -115,18 +114,16 @@ PART
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch3
 		switcherDescription = Top Cap
-		
+
 		SUBTYPE
 		{
 			name = Basic
-			
+
 			transform = TRUSSTOP
 			transform = COLLIDERTOPA01
 			transform = COLLIDERTOPA02
 			transform = COLLIDERTOPA03
 			transform = COLLIDERTOPA04
-			addedMass = 0.05
-			addedCost = 100
 		}
 		SUBTYPE
 		{
@@ -134,13 +131,15 @@ PART
 			node = top02
 			transform = TRUSSTOPSOLID
 			transform = COLLIDERTOPB
-			addedMass = 0.05
-			addedCost = 100
+			addedMass = 0.03
+			addedCost = 75
 		}
 		SUBTYPE
 		{
 			name = None
 			transform = TRUSSTOPFRAME
+			addedMass = -0.01
+			addedCost = -25
 		}
 	}
 	MODULE
@@ -148,7 +147,7 @@ PART
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch4
 		switcherDescription = Bottom Cap
-		
+
 		SUBTYPE
 		{
 			name = Basic
@@ -157,8 +156,6 @@ PART
 			transform = COLLIDERBOTA02
 			transform = COLLIDERBOTA03
 			transform = COLLIDERBOTA04
-			addedMass = 0.05
-			addedCost = 100
 		}
 		SUBTYPE
 		{
@@ -166,13 +163,15 @@ PART
 			node = bottom02
 			transform = TRUSSBOTSOLID
 			transform = COLLIDERBOTB
-			addedMass = 0.05
-			addedCost = 100
+			addedMass = 0.03
+			addedCost = 75
 		}
 		SUBTYPE
 		{
 			name = None
 			transform = TRUSSBOTFRAME
+			addedMass = -0.01
+			addedCost = -25
 		}
 	}
 }
