--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
@@ -23,11 +23,11 @@ PART
 
 
 	TechRequired = nanolathing
-	entryCost = 2900
-	cost = 800
+	entryCost = 3600
+	cost = 1000
 	category = Structural
 	subcategory = 0
-	title = Modular Spinal Truss XL
+	title = Modular Spinal Truss
 	manufacturer = Giga Bloks Construction Toys
 	description = A large square truss of considerable size with an internal core. Available in several variants.
 	attachRules = 1,1,1,1,0
@@ -35,7 +35,7 @@ PART
 	bulkheadProfiles = spinaltruss, srf
 
 	// --- standard part parameters ---
-	mass = 0.45
+	mass = 0.75
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -62,8 +62,8 @@ PART
 			name = Solid
 			transform = CORELRG
 			transform = COLLIDERLRGCORE
-			addedMass = 0.5
-			addedCost = 720
+			addedMass = 0.2
+			addedCost = 200
 		}
 	}
 	MODULE
@@ -79,6 +79,7 @@ PART
 			transform = COLLIDERLRG02
 			transform = COLLIDERLRG03
 			transform = COLLIDERLRG04
+
 		}
 		SUBTYPE
 		{
@@ -87,9 +88,9 @@ PART
 			transform = COLLIDERLRG01
 			transform = COLLIDERLRG02
 			transform = COLLIDERLRG03
-			
-			addedMass = -0.4
-			addedCost = -1080
+
+			addedMass = -0.0875
+			addedCost = -112.5
 		}
 		SUBTYPE
 		{
@@ -97,15 +98,15 @@ PART
 			transform = TRUSSLRGDUAL
 			transform = COLLIDERLRG01
 			transform = COLLIDERLRG02
-			addedMass = -0.7
-			addedCost = -2160
+			addedMass = -0.175
+			addedCost = -225
 		}
 		SUBTYPE
 		{
 			name = Frame
 			transform = TRUSSLRGFRAME
-			addedMass = -0.7
-			addedCost = -2160
+			addedMass = -0.35
+			addedCost = -450
 		}
 	}
 	MODULE
@@ -113,18 +114,16 @@ PART
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch3
 		switcherDescription = Top Cap
-		
+
 		SUBTYPE
 		{
 			name = Basic
-			
+
 			transform = TRUSSTOP
 			transform = COLLIDERTOPA01
 			transform = COLLIDERTOPA02
 			transform = COLLIDERTOPA03
 			transform = COLLIDERTOPA04
-			addedMass = 0.05
-			addedCost = 100
 		}
 		SUBTYPE
 		{
@@ -132,13 +131,15 @@ PART
 			node = top02
 			transform = TRUSSTOPSOLID
 			transform = COLLIDERTOPB
-			addedMass = 0.05
-			addedCost = 100
+			addedMass = 0.03
+			addedCost = 75
 		}
 		SUBTYPE
 		{
 			name = None
 			transform = TRUSSTOPFRAME
+			addedMass = -0.01
+			addedCost = -25
 		}
 	}
 	MODULE
@@ -146,18 +147,16 @@ PART
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch4
 		switcherDescription = Bottom Cap
-		
+
 		SUBTYPE
 		{
 			name = Basic
-			
+
 			transform = TRUSSBOT
 			transform = COLLIDERBOTA01
 			transform = COLLIDERBOTA02
 			transform = COLLIDERBOTA03
 			transform = COLLIDERBOTA04
-			addedMass = 0.05
-			addedCost = 100
 		}
 		SUBTYPE
 		{
@@ -165,13 +164,15 @@ PART
 			node = bottom02
 			transform = TRUSSBOTSOLID
 			transform = COLLIDERBOTB
-			addedMass = 0.05
-			addedCost = 100
+			addedMass = 0.03
+			addedCost = 75
 		}
 		SUBTYPE
 		{
 			name = None
 			transform = TRUSSBOTFRAME
+			addedMass = -0.01
+			addedCost = -25
 		}
 	}
 }
