--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-02.cfg
@@ -23,11 +23,11 @@ PART
 
 
 	TechRequired = nanolathing
-	entryCost = 2900
-	cost = 800
+	entryCost = 1800
+	cost = 500
 	category = Structural
 	subcategory = 0
-	title = Modular Spinal Truss XL
+	title = Modular Spinal Truss Mini
 	manufacturer = Giga Bloks Construction Toys
 	description = A medium square truss of considerable size with an internal core. Available in several variants.
 	attachRules = 1,1,1,1,0
@@ -35,7 +35,7 @@ PART
 	bulkheadProfiles = spinaltruss, srf
 
 	// --- standard part parameters ---
-	mass = 0.45
+	mass = 0.375
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -62,8 +62,8 @@ PART
 			name = Solid
 			transform = COREMED
 			transform = COLLIDERMEDCORE
-			addedMass = 0.5
-			addedCost = 720
+			addedMass = 0.1
+			addedCost = 100
 		}
 	}
 	MODULE
@@ -75,7 +75,6 @@ PART
 		{
 			name = Solid
 			transform = TRUSSMED
-			
 			transform = COLLIDERMED01
 			transform = COLLIDERMED02
 			transform = COLLIDERMED03
@@ -85,30 +84,28 @@ PART
 		{
 			name = Saddle
 			transform = TRUSSMEDSADDLE
-			
 			transform = COLLIDERMED04
 			transform = COLLIDERMED02
 			transform = COLLIDERMED03
 
-			addedMass = -0.4
-			addedCost = -1080
+			addedMass = -0.04375
+			addedCost = -56.25
 		}
 		SUBTYPE
 		{
 			name = Dual
 			transform = TRUSSMEDDUAL
-			
 			transform = COLLIDERMED03
 			transform = COLLIDERMED04
-			addedMass = -0.7
-			addedCost = -2160
+			addedMass = -0.0875
+			addedCost = -112.5
 		}
 		SUBTYPE
 		{
 			name = Frame
 			transform = TRUSSMEDFRAME
-			addedMass = -0.7
-			addedCost = -2160
+			addedMass = -0.175
+			addedCost = -225
 		}
 	}
 	MODULE
@@ -116,18 +113,16 @@ PART
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch3
 		switcherDescription = Top Cap
-		
+
 		SUBTYPE
 		{
 			name = Basic
-			
+
 			transform = TRUSSTOP
 			transform = COLLIDERTOPA01
 			transform = COLLIDERTOPA02
 			transform = COLLIDERTOPA03
 			transform = COLLIDERTOPA04
-			addedMass = 0.05
-			addedCost = 100
 		}
 		SUBTYPE
 		{
@@ -135,13 +130,15 @@ PART
 			node = top02
 			transform = TRUSSTOPSOLID
 			transform = COLLIDERTOPB
-			addedMass = 0.05
-			addedCost = 100
+			addedMass = 0.03
+			addedCost = 75
 		}
 		SUBTYPE
 		{
 			name = None
 			transform = TRUSSTOPFRAME
+			addedMass = -0.01
+			addedCost = -25
 		}
 	}
 	MODULE
@@ -149,18 +146,16 @@ PART
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch4
 		switcherDescription = Bottom Cap
-		
+
 		SUBTYPE
 		{
 			name = Basic
-			
+
 			transform = TRUSSBOT
 			transform = COLLIDERBOTA01
 			transform = COLLIDERBOTA02
 			transform = COLLIDERBOTA03
 			transform = COLLIDERBOTA04
-			addedMass = 0.05
-			addedCost = 100
 		}
 		SUBTYPE
 		{
@@ -168,13 +163,15 @@ PART
 			node = bottom02
 			transform = TRUSSBOTSOLID
 			transform = COLLIDERBOTB
-			addedMass = 0.05
-			addedCost = 100
+			addedMass = 0.03
+			addedCost = 75
 		}
 		SUBTYPE
 		{
 			name = None
 			transform = TRUSSBOTFRAME
+			addedMass = -0.01
+			addedCost = -25
 		}
 	}
 }
