--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-adapter-01.cfg
@@ -27,7 +27,7 @@ PART
 	subcategory = 0
 	title = Modular Hexa-Girder Adapter
 	manufacturer = Giga Bloks Construction Toys
-	description = Adapts a hexa truss connection to a 1.25m stack
+	description = Adapts a Hexa truss connection to a 1.25m stack
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = hextruss, srf, size1
