--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
@@ -50,6 +50,15 @@ PART
 
 	MODULE
 	{
+		name = ModuleB9DisableTransform
+		transform = LH2TankLarge
+		transform = LH2OTankLarge
+		transform = LiTankLarge
+		transform = ArTankLarge
+	}
+
+	MODULE
+	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Subtype
