--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
@@ -50,6 +50,15 @@ PART
 
 	MODULE
 	{
+		name = ModuleB9DisableTransform
+		transform = LH2TankMed
+		transform = LH2OTankMed
+		transform = LiTankMed
+		transform = ArTankMed
+	}
+
+	MODULE
+	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Subtype
