Add CRP trusses

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
@@ -52,9 +52,9 @@ PART
 	{
 		name = ModuleB9DisableTransform
 		transform = LH2TankLarge
-		transform = LH2OTankLarge
-		transform = LiTankLarge
-		transform = ArTankLarge
+		transform = LH2OXTankLarge
+		transform = LithiumTankLarge
+		transform = ArgonTankLarge
 	}
 
 	MODULE
