--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
@@ -52,9 +52,9 @@ PART
 	{
 		name = ModuleB9DisableTransform
 		transform = LH2TankMed
-		transform = LH2OTankMed
-		transform = LiTankMed
-		transform = ArTankMed
+		transform = LH2OXTankMed
+		transform = LithiumTankMed
+		transform = ArgonTankMed
 	}
 
 	MODULE
