--- a/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
@@ -9,16 +9,16 @@
   {
     %SUBTYPE[LH2OCryo]
     {
-      tankType = LH20
+      tankType = LH2OCryo
       transform = OctoLargeBare
       transform = COLLISION15
-      transform = LH2OTankLarge
+      transform = LH2OXTankLarge
       addedCost = 0
       crashTolerance = 50
     }
     %SUBTYPE[LH2Cryo]
     {
-      tankType = LH2
+      tankType = LH2Cryo
       transform = OctoLargeBare
       transform = COLLISION15
       transform = LH2TankLarge
@@ -30,7 +30,7 @@
       tankType = Lithium
       transform = OctoLargeBare
       transform = COLLISION15
-      transform = LiTankLarge
+      transform = LithiumTankLarge
       addedCost = 44887.5
       crashTolerance = 50
     }
@@ -39,7 +39,7 @@
       tankType = Argon
       transform = OctoLargeBare
       transform = COLLISION15
-      transform = ArTankLarge
+      transform = ArgonTankLarge
       addedCost = 15000
 
       crashTolerance = 50
@@ -47,7 +47,7 @@
   }
 }
 
-@PART[truss-octo-01]:NEEDS[CommunityResourcePack, CryoTanks]
+@PART[truss-octo-01]:NEEDS[CommunityResourcePack&CryoTanks]
 {
   MODULE
 	{
@@ -68,17 +68,17 @@
   {
     %SUBTYPE[LH2OCryo]
     {
-      tankType = LH20
-      transform = OctoLargeBare
+      tankType = LH2OCryo
+      transform = OctoMedBare
       transform = COLLISION15
-      transform = LH2OTankMed
+      transform = LH2OXTankMed
       addedCost = 0
       crashTolerance = 50
     }
     %SUBTYPE[LH2Cryo]
     {
-      tankType = LH2
-      transform = OctoLargeBare
+      tankType = LH2Cryo
+      transform = OctoMedBare
       transform = COLLISION15
       transform = LH2TankMed
       addedCost = 10500
@@ -87,18 +87,18 @@
     %SUBTYPE[Lithium]
     {
       tankType = Lithium
-      transform = OctoLargeBare
+      transform = OctoMedBare
       transform = COLLISION15
-      transform = LiTankMed
+      transform = LithiumTankMed
       addedCost = 22443.75
       crashTolerance = 50
     }
     %SUBTYPE[Argon]
     {
       tankType = Argon
-      transform = OctoLargeBare
+      transform = OctoMedBare
       transform = COLLISION15
-      transform = ArTankMed
+      transform = ArgonTankMed
       addedCost = 7500
 
       crashTolerance = 50
@@ -106,7 +106,7 @@
   }
 }
 
-@PART[truss-octo-02]:NEEDS[CommunityResourcePack, CryoTanks]
+@PART[truss-octo-02]:NEEDS[CommunityResourcePack&CryoTanks]
 {
 
   MODULE
