--- a/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
@@ -1,5 +1,5 @@
 // Adds support for CRP fuels when CRP is installed
-B9_TANK_TYPE:NEEDS[CommunityResourcePack, !CryoTanks]
+B9_TANK_TYPE:NEEDS[CommunityResourcePack&!CryoTanks]
 {
 	name = LH2OCryo
 	tankMass = 0.0004
@@ -16,7 +16,7 @@ B9_TANK_TYPE:NEEDS[CommunityResourcePack, !CryoTanks]
 		unitsPerVolume = 0.4
 	}
 }
-B9_TANK_TYPE:NEEDS[CommunityResourcePack, !CryoTanks]
+B9_TANK_TYPE:NEEDS[CommunityResourcePack&!CryoTanks]
 {
 	name = LH2Cryo
 	tankMass =  0.00025
