--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-3.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-3.cfg
@@ -19,9 +19,10 @@ PART {
 	node_stack_bottom01 = -0.3874502, -0.1534682, 0.0, 0.0, -1.0, 0.0, 0
 	node_stack_bottom02 = 0.1940879, -0.1534682, -0.3294833, 0.0, -1.0, 0.0, 0
 	node_stack_bottom03 = 0.1940879, -0.1534682, 0.3294833, 0.0, -1.0, 0.0, 0
+	node_stack_bottom04 = -0.0, -1.0, 			0.0, 		0.0, -1.0, 0.0, 1
 
 	bulkheadProfiles = size1, size0
-	
+
 	TechRequired = precisionEngineering
 	entryCost = 1050
 	cost = 250
