--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-4.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-4.cfg
@@ -20,6 +20,7 @@ PART {
 	node_stack_bottom02 = 0.4475777, -0.2280115, 0.0, 0.0, -1.0, 0.0, 0
 	node_stack_bottom03 = 0.0, -0.2280115, -0.4475777, 0.0, -1.0, 0.0, 0
 	node_stack_bottom04 = 0.0, -0.2280115, 0.4475777, 0.0, -1.0, 0.0, 0
+	node_stack_bottom05 = -0.0, -1.0, 			0.0, 		0.0, -1.0, 0.0, 1
 
 	bulkheadProfiles = size1, size0
 
