--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-2.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-2.cfg
@@ -13,15 +13,16 @@ PART {
 		scale = 1,1,1
 		rotation = 0, 0, 0
 	}
-	
+
 	rescaleFactor = 1.0
 
 	node_stack_top = 0.0, 0.118, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom01 = -0.2960, -0.1758, 0.0, 0.0, -1.0, 0.0, 0
 	node_stack_bottom02 = 0.296, -0.1758, 0.0, 0.0, -1.0, 0.0, 0
+	node_stack_bottom03 = -0.0, -1.0, 			0.0, 		0.0, -1.0, 0.0, 1
 
 	bulkheadProfiles = size1, size0
-	
+
 	TechRequired = precisionEngineering
 	entryCost = 1000
 	cost = 200
